src/styles/material/_checkbox.scss
:root {
  --mdc-checkbox-state-layer-size: 24px;
  --mdc-checkbox-selected-focus-state-layer-opacity: 0;
  --mdc-checkbox-selected-hover-state-layer-opacity: 0;
  --mdc-checkbox-selected-pressed-state-layer-opacity: 0;
  --mdc-checkbox-unselected-focus-state-layer-opacity: 0;
  --mdc-checkbox-unselected-hover-state-layer-opacity: 0;
  --mdc-checkbox-unselected-pressed-state-layer-opacity: 0;
  --mdc-checkbox-selected-pressed-icon-color: var(--primary-color);
  --mdc-checkbox-unselected-icon-color: #{$color-border};
  --mdc-checkbox-unselected-focus-icon-color: #{$color-border};
  --mdc-checkbox-unselected-hover-icon-color: #{$color-border};
  --mdc-checkbox-disabled-selected-icon-color: #{$color-border};

  --mdc-checkbox-selected-icon-color: var(--primary-color);
  --mdc-checkbox-selected-checkmark-color: white;
  --mdc-checkbox-selected-hover-icon-color: var(--primary-color);
  --mdc-checkbox-selected-focus-icon-color: var(--primary-color);
}

mat-checkbox .mdc-checkbox {
  // padding: 0;

  &__background {
    border-radius: 4px !important;
  }

  &__checkmark {
    background-color: $color-primary;
  }

  .mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate):not([data-indeterminate=true])~ {
    .mdc-checkbox__background {
      background-color: $background-primary;
    }
  }
}

